--- a/mob.css
+++ b/mob.css
@@ -18,3 +18,23 @@
     background-color: cadetblue;
     width: 100%;
 }
+
+.info-cinema{
+    width: 100%;
+    background-color: darkgoldenrod;
+}
+
+.info-filme{
+    width: 100%;
+    background-color: darkgoldenrod;
+}
+
+.info-retro{
+    width: 100%;
+    background-color: darkgoldenrod;
+}
+
+.info-destaques{
+    width: 100%;
+    background-color: darkgoldenrod;
+}
