--- a/estilo.css
+++ b/estilo.css
@@ -132,3 +132,8 @@
     height: 50px;
     background-color: red;
 }
+.horizontal {
+    width: 50px;
+    height: 50px;
+    background-color: green;
+}
