--- a/mob.css
+++ b/mob.css
@@ -3,38 +3,56 @@
     margin: 0;
 }
 
-.menu{
-  width: 100%;
-  height: 60px;
-  background-color: blanchedalmond;
+.menu {
+    width: 100%;
+    height: 60px;
+    background-color: red;
 }
 
-.conteudo{
+.conteudo {
     width: 100%;
-     background-color: cadetblue;
+    background-color: rgb(0, 238, 255);
 }
 
-.rodape{
-    background-color: cadetblue;
+.rodape {
+    background-color: rgb(0, 255, 0);
+    width: 100%;
+    text-align: center;
+}
+.info-cinema {
+    width: 100%;
+    background-color: rgb(250, 138, 1);
+}
+.info-filme {
+    width: 100%;
+    background-color: rgb(141, 110, 69);
+}
+.info-filme-retro {
+    width: 100%;
+    background-color: rgb(252, 140, 3);
+}
+.info-destaque {
+    width: 100%;
+    background-color: rgb(146, 109, 61);
+}
+.img-estilo {
     width: 100%;
 }
-
-.info-cinema{
-    width: 100%;
-    background-color: darkgoldenrod;
+@media screen and (mind-width: 768px) {
+    .menu {
+        height: 120px;
+        background-color: blue;
+    }
+    .conteudo {
+        display: flex;
+    }
 }
-
-.info-filme{
-    width: 100%;
-    background-color: darkgoldenrod;
-}
-
-.info-retro{
-    width: 100%;
-    background-color: darkgoldenrod;
-}
-
-.info-destaques{
-    width: 100%;
-    background-color: darkgoldenrod;
+@media screen and (min-width: 1028px) {
+    .menu {
+        height: 200px;
+        background-color: aqua;
+    }
+    .conteudo {
+        display: grid;
+    }
 }
