--- a/mob.css
+++ b/mob.css
@@ -2,11 +2,82 @@
     padding: 0;
     margin: 0;
 }
+:root{
+    --cor-fundo: rgb(7,2,255);
+    --cor-fonte: rgb(255,230,0);
+    --cor-hover: rgb(89,87,219);
 
-.menu {
-    width: 100%;
+}
+a{
+    text-decoration: none;
+}
+ul {    width: 100%;
     height: 60px;
-    background-color: red;
+}
+
+.header {
+  background-color:var(--cor-fundo);
+  position: sticky;
+  top: 0;
+  width: 100%;
+}
+.logo{
+    display: inline;
+    background: var(--cor-fundo);
+
+}
+.nav{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: var(--cor-fundo);
+    overflow: hidden;
+}
+.menu a {
+    display: block;
+    padding: 30px;
+    color: var(--cor-fonte);   
+}
+.menu a:hover{
+ background-color: var(--cor-hover);
+
+}
+.nav{
+    max-height: 0;
+    transition: max-height .5s ease-out;
+
+}
+.hamb{
+    cursor: pointer;
+    float:right;
+    padding: 35px 20px;
+
+}
+.hamb-line{
+    background-color: var(--cor-fonte);
+    display: block;
+    height: 2px;
+    position:relative;
+    width: 24px;
+}
+.hamb-line::before,
+.hamb-line::after{
+    background-color: var(--cor-fonte);
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+.hamb-line::before{
+    top: 5px    ;
+}
+.hamb-line::after{
+    top: -5px;
+}
+.side-menu{
+    display: none;
 }
 
 .conteudo {
